Fix width of workshop page on mobile when logged in

--- a/client/css/workshop.css
+++ b/client/css/workshop.css
@@ -113,3 +113,7 @@ code {
 .workshop-color-edit-field > * {
     margin-right: 5px;
 }
+
+.workshop-attachment-dropdown {
+    max-width: 100%;
+}
